# jupyterlab-execute-time

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml  update-integration-tests.yml
binder/: environment.yml  index.ipynb  postBuild
schema/: settings.json
src/: ExecuteTimeWidget.ts  formatters.ts  index.ts
style/: base.css  executeTime.css
tests/: formatters_spec.ts  tsconfig.json
ui-tests/: package.json  playwright.config.js
ui-tests/notebooks/: 100_code_cells.ipynb  Simple_notebook.ipynb  Timing_outcomes.ipynb  Timing_outputs_outcomes.ipynb
ui-tests/tests/: cell_operations.spec.ts  jupyterlab_execute_time.spec.ts  settings_editor.spec.ts  timing_outcomes.spec.ts  timing_outputs_outcomes.spec.ts  utils.ts  windowed_notebook.spec.ts
